--- a/static/index.html
+++ b/static/index.html
@@ -2,18 +2,22 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
 		<title>Net Digipyro</title>
 		<script src="jquery.min.js"></script>
-		<script src="ndpr.js" type="text/javascript"></script>
+		<script src="ndpr.js"></script>
 	</head>
 	<body>
 		<p id="status">NetDPR is Ready. Select Video:</p>
-		<div><input type="file" id="fileInput" accept="video/*"/><tr/>RPM: <input type="number" id="rpm" value=10 /></div>
-		<div><input type="submit" id="sendBut" value="Upload" style="visibility:hidden"></div>
+		<progress style="visibility:hidden"></progress>
+		<div>
+			<input type="submit" id="sendBut" value="submit" style="visibility:hidden"/>
+			<input type="file" id="fileInput" accept="video/*"/>
+			<tr/>RPM: <input type="number" id="rpm" value=10 />
+		</div>
 		<div>
 			<canvas id="drawSurf" style="position:absolute;z-index:2"></canvas>
-			<video autoplay muted=true id="videoIn" style="position:absolute;z-index:0"/>
+			<video loop muted=true id="videoIn" style="position:absolute;z-index:0"/>
 		</div>
 	</body>
 </html>
