--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 		<script src="ndpr.js"></script>
 	</head>
 	<body>
-		<p id="status">DIYrotate is Ready. Select Video:</p>
+        <p id="status">DIYrotate is ready. <br> Step 1/5: click button below to select video to derotate.</p>
 		<progress style="visibility:hidden"></progress>
 		<div>
 			<input type="submit" id="sendBut" value="submit" style="visibility:hidden"/>
