--- a/static/index.html
+++ b/static/index.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
-		<title>Net Digipyro</title>
-		<script src="jquery.min.js"></script>
-		<script src="ndpr.js"></script>
-	</head>
-	<body>
-        <p id="status">DIYrotate is ready. <br> Step 1/5: click button below to select video to derotate.</p>
-		<progress style="visibility:hidden"></progress>
-		<div>
-			<input type="submit" id="sendBut" value="submit" style="visibility:hidden"/>
-			<input type="file" id="fileInput" accept="video/*"/>
-			<tr/>RPM: <input type="number" id="rpm" value=10 />
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
+	<title>Net Digipyro</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+		integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+		integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+		crossorigin="anonymous"></script>
+	<script src="ndpr.js"></script>
+</head>
+
+<body>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">Net Digipyro</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+					aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+	</header>
+	<div class="container mt-3 ">
+		<div class="row">
+			<p class="alert alert-info" id="status">DIYrotate is ready. <br> Step 1/5: click button below to select
+				video to derotate.</p>
+			<progress style="visibility:hidden"></progress>
+			<div class=col>
+				<label class="form-label" for="fileInput">Select a file</label>
+				<input class="form-control" type="file" id="fileInput" accept="video/*" />
+				<label class="form-label" for="rpm">RPM of rotating frame </label>
+				<input class="form-control" type="number" id="rpm" value=10 />
+				<br>
+				<input class="btn btn-info form-control" type="submit" id="sendBut" value="submit"
+					style="visibility:hidden" />
+			</div>
 		</div>
-		<div>
-			<canvas id="drawSurf" style="position:absolute;z-index:2"></canvas>
-			<video loop muted=true id="videoIn" style="position:absolute;z-index:0"/>
+		<div class="row mt-3">
+			<div class='col'>
+				<canvas class="" id="drawSurf" style="position:absolute;z-index:2"></canvas>
+				<video class="" loop muted=true id="videoIn" style="position:absolute;z-index:0" />
+			</div>
 		</div>
-	</body>
-</html>
+	</div>
+</body>
