--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1"/>
 	<title>Net Digipyro</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<script src="jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+		crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
 		integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
 		crossorigin="anonymous"></script>
@@ -19,7 +21,7 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="bg-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">Net Digipyro</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -28,7 +30,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 	</header>
-	<div class="container mt-3 ">
+	<div class="container mt-3">
 		<div class="row">
 			<p class="alert alert-info" id="status">DIYrotate is ready. <br> Step 1/5: click button below to select
 				video to derotate.</p>
@@ -43,8 +45,8 @@
 					style="visibility:hidden" />
 			</div>
 		</div>
-		<div class="row mt-3">
-			<div class='col'>
+		<div class="row mt-3 p-0">
+			<div id="vidDiv" class='col'>
 				<canvas class="" id="drawSurf" style="position:absolute;z-index:2"></canvas>
 				<video class="" loop muted=true id="videoIn" style="position:absolute;z-index:0" />
 			</div>
