add site vistor analytics

--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,15 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
 		integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
 		crossorigin="anonymous"></script>
+
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQEXNTJPZY"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-EQEXNTJPZY');
+	</script>
+
 	<script src="ndpr.js"></script>
 </head>
 
