add images to site

--- a/static/index.html
+++ b/static/index.html
@@ -30,14 +30,16 @@
 
 <body>
 	<header>
-		<nav class="bg-light">
+		<nav class="bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">DIYRotate</a>
-				</button>
+				<em class="navbar-brand" style="color:white">DIYRotate</em>
+				<img class="navbar-brand" src="/spin-logo.png" height=35 style="float:right">
+				<img class="navbar-brand" src="/diynamics-logo.png" height=35 style="float:right">
+			</div>
 	</header>
 	<div class="container mt-3">
 		<div class="row">
-			<p class="alert alert-info" id="status">DIYrotate is ready. <br> Select
+			<p class="alert alert-info" id="status">DIYRotate is ready. <br> Select
 				video file to derotate below.</p>
 			<progress style="visibility:hidden"></progress>
 			<div class=col>
