reflect sample video

--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
 		<div class="row">
 			<p class="alert alert-info" style="font-size: 15px; font-weight: bold;" id="status">
 				Specify the rate of derotation, then a select video file to derotate below.
-				<br> Need help? Check out the <a href="https://github.com/OrangeRoof/diyrot/wiki"> wiki </a></p>
+				<br> Need help? Don't have a spinny table set up yet? Check out the <a href="https://github.com/OrangeRoof/diyrot/wiki"> wiki for tutorials and examples.</a></p>
 			<progress style="visibility:hidden"></progress>
 			<div class=col>
 				<label class="form-label" for="rpm">RPM of rotating frame (positive is counterclockwise) </label>
