--- a/static/index.html
+++ b/static/index.html
@@ -59,8 +59,15 @@
 		<div class="row mt-3 p-0">
 			<div id="vidDiv" class='col'>
 				<canvas class="" id="drawSurf" style="position:absolute;z-index:2"></canvas>
-				<video class="" loop muted=true id="videoIn" style="position:absolute;z-index:0" />
+				<video class="" loop muted=true id="videoIn" style="position:relative;z-index:0" />
 			</div>
 		</div>
 	</div>
+	<hr>
+	<footer class="footer navbar-inverse">
+		<div class="container" style="font-size:x-small">
+			DIYrotate was created by Alex Chen, with guidance and support from Jon Aurnou and Roderic O'Connor. <br>
+			<i id="usecount"> This website has been used x times. </i>
+		</div>
+	</footer>
 </body>
