add poor man site counter; add links to stuff

--- a/static/index.html
+++ b/static/index.html
@@ -33,8 +33,12 @@
 		<nav class="bg-dark">
 			<div class="container-fluid">
 				<em class="navbar-brand" style="color:white">DIYRotate</em>
-				<img class="navbar-brand" src="/spin-logo.png" height=35 style="float:right">
-				<img class="navbar-brand" src="/diynamics-logo.png" height=35 style="float:right">
+				<a href="https://spinlab.ess.ucla.edu/">
+					<img class="navbar-brand" src="/spin-logo.png" height=35 style="float:right">
+				</a>
+				<a href="https://diynamics.github.io/">
+					<img class="navbar-brand" src="/diynamics-logo.png" height=35 style="float:right">
+				</a>
 			</div>
 	</header>
 	<div class="container mt-3">
@@ -66,8 +70,11 @@
 	<hr>
 	<footer class="footer navbar-inverse">
 		<div class="container" style="font-size:x-small">
-			DIYrotate was created by Alex Chen, with guidance and support from Jon Aurnou and Roderic O'Connor. <br>
-			<i id="usecount"> This website has been used x times. </i>
+			DIYrotate was created by 
+			<a href="https://alch.dev">Alex Chen</a>, with guidance and support from 
+			<a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a> and 
+			<a href="https://github.com/sixtycycles">Roderic O'Connor.</a> <br>
+			<i id="useCount"></i>
 		</div>
 	</footer>
 </body>
