update todos and bug fixes

--- a/static/index.html
+++ b/static/index.html
@@ -79,8 +79,8 @@
 		<div class="container" style="font-size:small">
 			DIYrotate was created by 
 			<a href="https://alch.dev">Alex Chen</a>, with guidance and support from 
-			<a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a> and 
-			<a href="https://github.com/sixtycycles">Roderic O'Connor.</a> <br>
+			<a href="https://github.com/sixtycycles">Roderic O'Connor</a> and
+			<a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a>. <br>
 			<i id="useCount"></i>
 		</div>
 	</footer>
