--- a/static/index.html
+++ b/static/index.html
@@ -70,7 +70,7 @@
 		<div class="row mt-3 p-0">
 			<div id="vidDiv" class='col'>
 				<canvas class="" id="drawSurf" style="position:absolute;z-index:2"></canvas>
-				<video class="" loop muted=true id="videoIn" style="position:relative;z-index:0" />
+				<video class="" loop playsinline muted=true id="videoIn" style="position:relative;z-index:0" />
 			</div>
 		</div>
 	</div>
