--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
 		<nav class="bg-dark">
 			<div class="container-fluid">
 				<em class="navbar-brand" style="color:white">
-                    <a href="https://diyrot.epss.ucla.edu/" style="text-decoration:none;color:white">
+                    <a href="javascript:window.location.reload()" style="text-decoration:none;color:white">
                         DIYRotate
                     </a>
                 </em>
@@ -86,8 +86,8 @@
                     <ul id="st20" hidden>
                         <li id="st21"> Step 2.1: make adjustments and generate new preview</li>
                     </ul>
-                    <li id="st3"> Step 3: wait for derotated video</li>
-                    <li id="st4"> Step 4: download full video</li>
+                    <li id="st3"> Step 3: wait for server to derotate video</li>
+                    <li id="st4"> Step 4: download full quality derotated video</li>
                 </ul>
             </div>
         </div>
