--- a/static/index.html
+++ b/static/index.html
@@ -113,5 +113,8 @@
 			<a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a>. <br>
 			<i id="useCount"></i>
 		</div>
+		<div class="container" style="font-size:small">
+			DIYRotate works best on Firefox or Chrome. On Safari, users may not be able to complete video uploads > 100 Mb.
+		</div>
 	</footer>
 </body>
