--- a/static/index.html
+++ b/static/index.html
@@ -113,8 +113,9 @@
 			<a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a>. <br>
 			<i id="useCount"></i>
 		</div>
+		<br>
 		<div class="container" style="font-size:small">
-			DIYRotate works best on Firefox or Chrome. On Safari, users may not be able to complete video uploads > 100 Mb.
+			DIYRotate works best on Firefox or Chrome. On Safari, users may not be able to complete video uploads >100MB.
 		</div>
 	</footer>
 </body>
