--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
                 <p class="alert alert-info mb-0" style="font-size:15px;font-weight:bold" id="status">
                     Specify the rate of derotation, then select a video file to derotate. <br>
                     Need help? Don't have a spinny table set up yet? Check out the 
-                    <a href="https://github.com/DIYnamics/diyrot/wiki"> wiki for tutorials and examples.</a>
+		    <a href="https://diynamics.github.io/pages/diyrotate.html"> diynamics page </a> for tutorials and examples.
                 </p>
             </div>
             <div class="col-md-4">
