--- a/static/index.html
+++ b/static/index.html
@@ -107,15 +107,15 @@
 	<hr>
 	<footer class="footer navbar-inverse">
 		<div class="container" style="font-size:small">
-			DIYrotate was created by 
+			DIYRotate works best on Firefox or Chrome. On Safari, users may not be able to complete video uploads >100MB.
+		</div>
+		<br>
+		<div class="container" style="font-size:small">
+			DIYRotate was created by 
 			<a href="https://alch.dev">Alex Chen</a>, with guidance and support from 
 			<a href="https://github.com/sixtycycles">Roderic O'Connor</a> and
 			<a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a>. <br>
 			<i id="useCount"></i>
-		</div>
-		<br>
-		<div class="container" style="font-size:small">
-			DIYRotate works best on Firefox or Chrome. On Safari, users may not be able to complete video uploads >100MB.
 		</div>
 	</footer>
 </body>
