add highfps link; clarify rpm 1

--- a/static/index.html
+++ b/static/index.html
@@ -72,8 +72,10 @@
             <div class="col-md-8">
                 <p class="alert alert-info mb-0" style="font-size:15px;font-weight:bold" id="status">
                     Specify the rate of derotation, then select a video file to derotate. <br>
+                    If you have slow motion video, click <a href="https://diynamics.github.io/pages/diyrotate.html#slow-mo">here</a>
+                    for an explanation of what number to put in the RPM field. <br>
                     Need help? Don't have a spinny table set up yet? Check out the 
-		    <a href="https://diynamics.github.io/pages/diyrotate.html"> diynamics page </a> for tutorials and examples.
+                    <a href="https://diynamics.github.io/pages/diyrotate.html"> diynamics page </a> for tutorials and examples. <br>
                 </p>
             </div>
             <div class="col-md-4">
@@ -84,7 +86,7 @@
                     </ul>
                     <li id="st2"> Step 2: examine preview</li>
                     <ul id="st20" hidden>
-                        <li id="st21"> Step 2.1: make adjustments and generate new preview</li>
+                        <li id="st21"> Step 2.1: adjust RPM and/or rotation circle, then generate new preview</li>
                     </ul>
                     <li id="st3"> Step 3: wait for server to derotate video</li>
                     <li id="st4"> Step 4: download full quality derotated video</li>
