Build system fixes

--- a/static/index.html
+++ b/static/index.html
@@ -16,14 +16,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
 		integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
 		crossorigin="anonymous"></script>
-
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EQEXNTJPZY"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-EQEXNTJPZY');
-	</script>
 	<script src="ndpr.js"></script>
 </head>
 
@@ -82,8 +74,8 @@
                          optionally excluding an area in the middle.</text>
                         </div>
                         <div>
-                        <label class="form-check-label mb-0" style="margin-left:10px" for="printTrack">
-                            <input class="form-check-input" type="checkbox" id="printTrack" autocomplete=off /> Download list of tracked points in rotating frame as .csv file
+                        <label class="form-check-label mb-0" style="margin-left:10px" for="exportCSV">
+                            <input class="form-check-input" type="checkbox" id="exportCSV" autocomplete=off /> Download list of tracked points in rotating frame as .csv file
                         </label>
                         </div>
                         <div>
