Fix server/frontend bugs

--- a/static/index.html
+++ b/static/index.html
@@ -79,8 +79,8 @@
                         </label>
                         </div>
                         <div>
-                        <label class="form-check-label mb-0" style="margin-left:10px" for="visForce">
-                            <input class="form-check-input" type="checkbox" id="visForce" autocomplete=off /> Visualize centripetal force for each point
+                        <label class="form-check-label mb-0" style="margin-left:10px" for="visRadius">
+                            <input class="form-check-input" type="checkbox" id="visRadius" autocomplete=off /> Visualize rotation radius and velocity in the rotating frame
                         </label>
                         </div>
                     </div>
