--- a/static/index.html
+++ b/static/index.html
@@ -143,8 +143,10 @@
 		<div class="container" style="font-size:small">
 			DIYRotate was created by 
 			<a href="https://alch.dev">Alex Chen</a>, with guidance and support from 
-			<a href="https://github.com/sixtycycles">Roderic O'Connor</a> and
+			<a href="https://epss.ucla.edu/people/staff/1154/">Daniel Chung</a>, 
+			<a href="https://github.com/sixtycycles">Roderic O'Connor</a>, and 
 			<a href="https://epss.ucla.edu/people/faculty/543/">Jon Aurnou</a>. <br>
+			DIYRotate was developed from the <a href="https://new.nsf.gov/funding/opportunities/geophysics-ph">NSF Geophysics Program</a>. <br>
 			<i id="useCount"></i>
 		</div>
 	</footer>
